fix column.scss overflow

--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -16,6 +16,7 @@
     max-height: 100%;
     position: relative;
     white-space: normal;
+    overflow: hidden;
   }
 
   &__title {
